# compprog_students

./: .gitignore  README.md
basics/: git_basics.sh  type_worksheet.py
examples/: argparse_example.py  good_example_code.py
examples/package/mypackage/: setup.cfg  tox.ini
examples/package/mypackage/src/mypackage/: mymodule.py
examples/package/mypackage/tests/: test_mymodule.py
intro/: .bash_profile  bash_basics.sh  clone_student_repo.sh  install_sublime.sh  your_first_git_commit.sh
module_0_intro_and_setup/: .bash_profile  README.md  install_sublime.sh  module_0.md
module_0_intro_and_setup/assignments/: github_setup.md  vm_setup.md
module_0_intro_and_setup/resources/: .bash_profile
module_1_basics/: README.md  executing_files.sh  type_worksheet.py  your_first_git_commit.sh
module_2_scripting/: README.md  argparse_example.py  function_bugs.py  loops.py
module_3_oop/: README.md  m3a0_class_basics.py
module_4_advanced_topics/: README.md
module_5_more_advanced_topics/: flask_api.py  lambda_functions.py  parallel_map.py  sqlite_introduction.py  sqlite_introduction.sh
module_5_packaging/: README.md
module_6_containerization/: README.md  docker-entrypoint.sh
module_6_packaging/: regex.py
module_7_containerization/: Dockerfile  container_basics.txt  docker-compose.yml  my_first_container.sh
module_7_containerization/web_app/: docker-entrypoint.sh  server.py  setup.cfg  uwsgi.ini
scripting/: colored_output.py  conditionals_exercise.py  conditionals_overview.py  function_bugs.py  loops.py
uncategorized/: error_handling.py
(+58 files in other folders)
