[metadata]
name = my_web_app
version = attr: my_web_app.__version__
description = Something to fill out...

[options]
packages = find:
package_dir = = src
include_package_data = True
python_requires = >=3.13.1
install_requires =
  eventlet
  flask
  flask-socketio
  jinja2


[options.package_data]
my_web_app = 
    static/**
    templates/**

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    my-executable = my_web_app.server:start_application
    
[tool:pytest]
testpaths = tests
pythonpath = src
