[metadata]
name = mypackage
version = attr: mypackage.__version__
description = Something

[options]
packages = find:
package_dir = = src
include_package_data = True
python_requires = >=3.8.6
install_requires =
    colorama

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    mypackage = mypackage.server:main
    
[tool:pytest]
testpaths = tests
pythonpath = src
